--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
+        "@google/generative-ai": "^0.24.1",
         "@mui/icons-material": "^6.1.2",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
