--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "styled-components": "^6.1.13"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node backend/server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm install --prefix backend"
   },
   "eslintConfig": {
     "extends": [
